# nava2

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  db.env.example  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0ace9759c30e_initial_schema.py  a918d5f07719_initial_schema.py
app/: celery_app.py  cli.py  deps.py  main.py  models.py  schemas.py  tasks.py
app/api/: admin.py  auth.py  reports.py
app/core/: config.py  logging.py  openapi.py  security.py
app/db/: mssql.py  postgres.py  redis_client.py
app/services/: aggregator.py  exceptions.py  mssql.py  request.py  runtime.py  templates_repo.py  validator.py
app/services/db/: db_adapter.py  mssql.py
puppeteer/: Dockerfile  app.js  package-lock.json  package.json
