[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"] 

[project]
name = "nava2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.8",
  "jinja2>=3.1",
  "httpx>=0.27",
  "celery>=5.3",
  "redis>=5.0",
  "pyjwt>=2.8",
]
optional-dependencies.dev = [
  "ruff>=0.5.0",
  "black>=24.3.0",
  "mypy>=1.10.0",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pre-commit>=3.7.0",
  "types-redis",
  "types-requests",
  "types-python-dateutil",
]

[tool.black]
line-length = 100
target-version = ["py311"]
preview = true

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations"]
lint.select = ["E","F","I","B","UP","N","D","ASYNC","A","C4","PIE","RUF"]
lint.ignore = [
  "D100","D101","D102","D103","D104","D105","D106","D107",
]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
warn_unused_configs = true
plugins = []
ignore_missing_imports = true
files = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=app --cov-report=term-missing"
testpaths = ["app/tests"]
